# kim-convergence

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
convergence/: __init__.py  _default.py  _version.py  batch.py  beta_dist.py  equilibration_length.py  err.py  mser_m.py  normal_dist.py  outlier.py  run_length_control.py  s_normal_dist.py  scale.py  statistical_inefficiency.py  stats.py  t_dist.py  timeseries.py  ucl.py  utils.py  zero_rc.py  zero_rc_bounds.py
convergence/stats/: __init__.py  beta_dist.py  chi_square_test.py  ks_test.py  nonnormal_test.py  normal_dist.py  normal_test.py  randomness_test.py  t_dist.py  t_test.py  tools.py  zero_rc.py  zero_rc_bounds.py
convergence/timeseries/: __init__.py  equilibration_length.py  geweke.py  run_length_control.py  statistical_inefficiency.py  utils.py
convergence/ucl/: __init__.py  mser_m.py  mser_m_y.py  n_skart.py  ucl_base.py  uncorrelated_samples.py
convergence/ucl/spectral/: __init__.py  heidelberger_welch.py
doc/: api.rst  best_practices.rst  conf.py  contributing.rst  convergence.rst  examples.rst  getting_started.rst  index.rst  make.bat  overview.rst  references.rst  theory.rst  troubleshooting.rst
doc/modules/: ase.rst  other_utils.rst  run_length_control.rst  stats.rst  timeseries.rst  ucl.rst
examples/: README.md
examples/ase/: README.md  example_equilibration.py
examples/lammps/: README.md  cr_rlc_lammps.py  in.lj  in.lj2  in.lj3  run_length_control.py
examples/lammps/cr_rlc_lammps_pkg/: _argument_parser.py  _trajectory_callback.py  driver.py
examples/openmm/: example1.py
kim_convergence/: __init__.py  _default.py  _version.py  batch.py  err.py  outlier.py  run_length_control.py  scale.py  utils.py
kim_convergence/ase/: __init__.py  equilibration.py  extractors.py
kim_convergence/run_length_control/: __init__.py  _accuracy.py  _convergence.py  _equilibration.py  _population.py  _run_length.py  _setup.py  _trajectory.py  _variable_list_factory.py  core.py
kim_convergence/stats/: __init__.py  beta_dist.py  nonnormal_test.py  normal_dist.py  normal_test.py  randomness_test.py  t_dist.py  tools.py  zero_rc.py  zero_rc_bounds.py
kim_convergence/stats/_stfft/: README.md  __init__.py  stfft_wrapper.cpp
kim_convergence/timeseries/: __init__.py  equilibration_length.py  geweke.py  statistical_inefficiency.py  utils.py
kim_convergence/ucl/: __init__.py  mser_m.py  mser_m_y.py  n_skart.py  ucl_base.py  uncorrelated_samples.py
kim_convergence/ucl/spectral/: __init__.py  heidelberger_welch.py
tests/fixtures/: T_nvt_traj.txt
tests/test_convergence/: test_batch.py  test_beta_dist.py  test_equilibration_length.py  test_mser_m.py  test_outlier.py  test_s_normal_dist.py  test_scale.py  test_stats.py  test_stats_beta_dist.py  test_stats_nonnormal_test.py  test_stats_normal_test.py  test_stats_s_normal_dist.py  test_stats_t_dist.py  test_t_dist.py  test_timeseries.py  test_timeseries_equilibration_length.py  test_ucl.py  test_ucl_mser_m.py
tests/test_kim_convergence/: test_ase.py  test_batch.py  test_outlier.py  test_run_length_control.py  test_scale.py  test_stats.py  test_stats_beta_dist.py  test_stats_nonnormal_test.py  test_stats_normal_test.py  test_stats_s_normal_dist.py  test_stats_t_dist.py  test_timeseries.py  test_timeseries_equilibration_length.py  test_ucl.py  test_ucl_mser_m.py
