[build-system]
requires = [ "setuptools", "versioneer[toml]==0.29", "numpy>1.16", "scipy",
             "kim-edn>1.4.0", "joblib" ]
build-backend = "setuptools.build_meta"

[project]
name = "kim-convergence"
dependencies = [ "numpy>1.16", "scipy", "kim-edn>1.4.0", "joblib" ]
authors = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
maintainers = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
description = "kim-convergence designed to help in automatic equilibration detection & run length control."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "LGPL-2.1-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
keywords = [ "convergence", "automated equilibration detection", "run length control",
             "upper confidence limit", "confidence interval" ]

[project.urls]
Homepage = "https://github.com/openkim/kim-convergence"
Documentation = "https://kim-convergence.readthedocs.io/"
Issues = "https://github.com/openkim/kim-convergence/issues"
Source = "https://github.com/openkim/kim-convergence"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "kim_convergence*" ]

[tool.setuptools.dynamic]
version = { attr = "kim_convergence.__version__" }

[tool.flake8]
per-file-ignores = [
    "examples/openmm/example1.py: F401, F403, F405"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "kim_convergence/_version.py"
versionfile_build = "kim_convergence/_version.py"
tag_prefix = "v"
parentdir_prefix = "kim_convergence-"

[project.optional-dependencies]
doc = [
    "sphinx>=8.0,<9.0",
    "sphinx-rtd-theme",
    "numpydoc",
    "myst-parser",
    "sphinxcontrib-mermaid",
    "sphinx-design",
]
